// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> it should render 1`] = `
.c0 {
  padding: 10px;
  font-family: 'Open Sans',sans-serif;
  font-size: 1em;
  border-width: 1px;
  border-color: #ddd;
  border-style: solid;
  outline: none;
  width: 100%;
  -webkit-transition: border-color 150ms;
  transition: border-color 150ms;
}

.c0:focus {
  border-color: #4375E8;
}

.c0::-webkit-input-placeholder {
  color: #aaa;
}

.c0::-moz-placeholder {
  color: #aaa;
}

.c0:-ms-input-placeholder {
  color: #aaa;
}

.c0::placeholder {
  color: #aaa;
}

<textarea
  className="c0"
/>
`;

exports[`<TextArea placeholder /> it should render 1`] = `
.c0 {
  padding: 10px;
  font-family: 'Open Sans',sans-serif;
  font-size: 1em;
  border-width: 1px;
  border-color: #ddd;
  border-style: solid;
  outline: none;
  width: 100%;
  -webkit-transition: border-color 150ms;
  transition: border-color 150ms;
}

.c0:focus {
  border-color: #4375E8;
}

.c0::-webkit-input-placeholder {
  color: #aaa;
}

.c0::-moz-placeholder {
  color: #aaa;
}

.c0:-ms-input-placeholder {
  color: #aaa;
}

.c0::placeholder {
  color: #aaa;
}

<textarea
  className="c0"
  placeholder="foo"
/>
`;
